# stock_prediction

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml
config/: nifty50.yaml  settings.yaml
docs/: DESIGN.md  configuration.md  features.md  model_features.md  sequence_diagrams.md  technical_design.md  usage_guide.md
src/stock_prediction/: __init__.py  auth.py  cli.py  config.py
src/stock_prediction/data/: __init__.py  base.py  yfinance_provider.py
src/stock_prediction/features/: __init__.py  financial.py  news_based.py  pipeline.py  technical.py
src/stock_prediction/llm/: __init__.py  base.py  news_analyzer.py  ollama_provider.py
src/stock_prediction/models/: __init__.py  dqn_lag_model.py  dqn_model.py  encoder_decoder_model.py  ensemble.py  lstm_model.py  prophet_model.py  qlearning_model.py  tft_model.py  trainer.py  xgboost_lag_model.py  xgboost_model.py
src/stock_prediction/news/: __init__.py  ner.py  news_features.py  rss_fetcher.py  sentiment.py
src/stock_prediction/signals/: __init__.py  generator.py  paper_trading.py  report.py  screener.py
src/stock_prediction/utils/: constants.py  logging.py  plot_utils.py
tests/: conftest.py  test_data_providers.py  test_features.py  test_integration.py  test_llm_analysis.py  test_models.py  test_news_pipeline.py  test_paper_trading.py  test_screener.py  test_shortlist.py  test_signals.py  test_staleness.py  test_suggest.py  test_technical_indicators.py
